ffxivapi has retired its lodestone endpoints, so switch to crawling that directly